--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "* Grid Layout;\r * Флексбокс-вёрстка;\r * Позиционирование элементов.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "RMDIR dist && webpack --mode production",
+    "dev": "webpack-dev-server --open --watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SekToR90/mesto.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -18,7 +19,23 @@
   },
   "homepage": "https://github.com/SekToR90/mesto#readme",
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "autoprefixer": "^9.8.6",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^4.2.2",
+    "cssnano": "^4.1.10",
+    "file-loader": "^6.1.0",
+    "html-loader": "^1.3.0",
+    "html-webpack-plugin": "^4.4.1",
+    "mini-css-extract-plugin": "^0.11.0",
+    "postcss-loader": "^3.0.0",
+    "rimraf": "^3.0.2",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "core-js": "^3.6.5"
   }
 }
