--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "* Grid Layout;\r * Флексбокс-вёрстка;\r * Позиционирование элементов.",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf dist && webpack --mode production",
     "dev": "webpack-dev-server --open --watch"
@@ -26,6 +28,7 @@
     "css-loader": "^4.2.2",
     "cssnano": "^4.1.10",
     "file-loader": "^6.1.0",
+    "gh-pages": "^3.1.0",
     "html-loader": "^1.3.0",
     "html-webpack-plugin": "^4.4.1",
     "mini-css-extract-plugin": "^0.11.0",
